// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourcesTree After changing expanded nodes Shows the tree with four.js, five.js and six.js expanded 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="no-sources-message"
    key="empty"
  >
    This page has no sources
  </div>
</div>
`;

exports[`SourcesTree Should show the tree with nothing expanded 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="no-sources-message"
    key="empty"
  >
    This page has no sources
  </div>
</div>
`;

exports[`SourcesTree When loading initial source Shows the tree with one.js, two.js and three.js expanded 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="no-sources-message"
    key="empty"
  >
    This page has no sources
  </div>
</div>
`;

exports[`SourcesTree on receiving new props updates highlighted items updates highlightItems if selectedSource changes 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="no-sources-message"
    key="empty"
  >
    This page has no sources
  </div>
</div>
`;

exports[`SourcesTree with custom root renders custom root source list 1`] = `
<div
  className="sources-pane sources-list-custom-root"
  key="pane"
>
  <div
    className="sources-clear-root-container"
    key="root"
  >
    <button
      className="sources-clear-root"
      onClick={[Function]}
      title="Remove directory root"
    >
      <Svg
        name="home"
      />
      <Svg
        name="breadcrumb"
      />
      <span
        className="sources-clear-root-label"
      >
        mdn.com
      </span>
    </button>
  </div>
  <div
    className="no-sources-message"
    key="empty"
  >
    This directory root has no sources
  </div>
</div>
`;

exports[`SourcesTree with custom root renders empty custom root source list 1`] = `
<div
  className="sources-pane sources-list-custom-root"
  key="pane"
>
  <div
    className="sources-clear-root-container"
    key="root"
  >
    <button
      className="sources-clear-root"
      onClick={[Function]}
      title="Remove directory root"
    >
      <Svg
        name="home"
      />
      <Svg
        name="breadcrumb"
      />
      <span
        className="sources-clear-root-label"
      >
        custom
      </span>
    </button>
  </div>
  <div
    className="no-sources-message"
    key="empty"
  >
    This directory root has no sources
  </div>
</div>
`;
